[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player_Control.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.92038
height = 17.62

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.111111, 0.5 ), 0.0, 1.71074, 0, 0, Vector2( 0.222222, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.655556, 0 ), 1.83273, 1.83273, 0, 0, Vector2( 0.788889, 0 ), -0.122727, -0.122727, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.177778, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.633333, 0.454545 ), 0.0991735, 0.0991735, 0, 0, Vector2( 0.988889, 0.654545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.511111, 0.6 ), 0.0, 0.0, 0, 0, Vector2( 0.777778, 0.0454545 ), 0.0, 0.0, 0, 0 ]

[node name="RigidBody2D" type="RigidBody2D"]
position = Vector2( 0, 500 )
rotation = 1.5708
collision_layer = 0
contacts_reported = 2
contact_monitor = true
angular_damp = 3.0
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Rocket" type="Line2D" parent="."]
position = Vector2( 0, 3.97372 )
scale = Vector2( 0.2, 0.35 )
z_index = 5
points = PoolVector2Array( -0.124268, 3.05498, 0, -40, 0, -64 )
width = 50.0
width_curve = SubResource( 2 )
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D2" type="Line2D" parent="Rocket"]
position = Vector2( 0, 0.127703 )
scale = Vector2( 1, 1.00471 )
z_index = 5
points = PoolVector2Array( 1.25, 98.0566, 0.15625, 2.90991 )
width = 30.0
width_curve = SubResource( 3 )
default_color = Color( 1, 0.705882, 0.145098, 1 )

[node name="Line2D" type="Line2D" parent="Rocket"]
position = Vector2( -0.0551758, 0.181726 )
z_index = 5
points = PoolVector2Array( 0, -8, 0, -40, 0, -64 )
width = 50.0
width_curve = SubResource( 4 )
default_color = Color( 1, 1, 1, 1 )

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RigidBody2D_body_exited"]
